--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.4.5",
     "ee-first": "^1.1.1",
     "encodeurl": "^1.0.2",
     "es-define-property": "^1.0.0",
@@ -63,6 +64,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.3.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "nodemon": "^3.1.0",
